.provarCaches/00D5h000009Q6XQEA0/objects/provar__Test_Cycle__c.object
<CustomObject>
    <description>Details each test cycle that has been executed and a rollup of the total case results. A Test Cycle can also be thought of as a Test Plan Execution if you&apos;r using Test Plans in your project. A Test Cycle is special in that you can choose to re-execute a Test Cycle with the same suite of test cases, or just those that failed. Multiple Test Plans can also be included in a Test Cycle.</description>
    <fields>
        <fullName>provar__Browser_Version__c</fullName>
        <label>Browser Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Comments__c</fullName>
        <description>For documenting analysis of the test results</description>
        <inlineHelpText>Provide any comments about the test cycle results.</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>provar__Device_Model__c</fullName>
        <label>Device Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__End_Date_Time__c</fullName>
        <label>End Date Time</label>
        <summarizedField>provar__Test_Execution__c.provar__End_Date_Time__c</summarizedField>
        <summaryFilterItems>
            <field>provar__Test_Execution__c.provar__End_Date_Time__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>provar__Test_Execution__c.provar__Test_Cycle__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>provar__Environment_Text__c</fullName>
        <description>The environment where this test cycle was executed against for this suite of results.</description>
        <inlineHelpText>Manually enter the Environment being tested, for example SIT, Staging, UAT or Production</inlineHelpText>
        <label>Environment Text</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Environment used for this test cycle execution</description>
        <label>Environment</label>
        <referenceTo>provar__Environment__c</referenceTo>
        <relationshipLabel>Test Cycles</relationshipLabel>
        <relationshipName>Test_Cycles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>provar__Operating_System_Version__c</fullName>
        <label>Operating System Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Operating_System__c</fullName>
        <label>Operating System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Pass_Rate__c</fullName>
        <description>Overall pass rate for all the tests executed in this suite. Useful for test reports and averaging pass rate or measuring over time without needing to include the Test Case Results.</description>
        <formula>IF(provar__Total_Tests_Executed__c &gt; 0, 
provar__Total_Passed__c / provar__Total_Tests_Executed__c, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pass Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>provar__Progress__c</fullName>
        <formula>IF(provar__Total_Test_Executions__c &gt; 0,
(provar__Total_Passed__c + provar__Total_Failed__c + provar__Total_Skipped__c) / provar__Total_Test_Executions__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Progress</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>provar__Screen_Resolution__c</fullName>
        <label>Display Resolution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Start_Date_Time__c</fullName>
        <label>Start Date Time</label>
        <summarizedField>provar__Test_Execution__c.provar__Start_Date_Time__c</summarizedField>
        <summaryFilterItems>
            <field>provar__Test_Execution__c.provar__Start_Date_Time__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>provar__Test_Execution__c.provar__Test_Cycle__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>provar__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Test_Cycle_Name__c</fullName>
        <label>Test Cycle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Test_Plan_Schedule_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Plan Schedule Job</label>
        <referenceTo>provar__Test_Plan_Schedule_Job__c</referenceTo>
        <relationshipLabel>Test Cycles</relationshipLabel>
        <relationshipName>Test_Cycles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__Test_Plan_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Plan Schedule</label>
        <referenceTo>provar__Test_Plan_Schedule__c</referenceTo>
        <relationshipLabel>Test Cycles</relationshipLabel>
        <relationshipName>Test_Cycles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__Test_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Test Plan followed for this execution cycle</description>
        <inlineHelpText>The Test Plan used for defining the suite of tests to be executed</inlineHelpText>
        <label>Test Plan</label>
        <referenceTo>provar__Test_Plan__c</referenceTo>
        <relationshipLabel>Test Cycles</relationshipLabel>
        <relationshipName>Test_Cycles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__Testing_Tool_Version__c</fullName>
        <label>Testing Tool Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Testing_Tool__c</fullName>
        <label>Testing Tool</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Total_Duration__c</fullName>
        <description>Total time for all test cases to be executed in this test cycle</description>
        <inlineHelpText>The total time in minutes for all tests to be executed in this test cycle</inlineHelpText>
        <label>Total Duration (Mins)</label>
        <summarizedField>provar__Test_Execution__c.provar__Duration__c</summarizedField>
        <summaryForeignKey>provar__Test_Execution__c.provar__Test_Cycle__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>provar__Total_Failed__c</fullName>
        <description>Calculated automatically from the related Test Execution records with a status of Fail</description>
        <inlineHelpText>The total number of child test cases that failed during this cycle</inlineHelpText>
        <label>Total Failed</label>
        <summaryFilterItems>
            <field>provar__Test_Execution__c.provar__Status__c</field>
            <operation>equals</operation>
            <value>Fail</value>
        </summaryFilterItems>
        <summaryForeignKey>provar__Test_Execution__c.provar__Test_Cycle__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>provar__Total_Passed__c</fullName>
        <description>The total number of test cases that passed during this cycle</description>
        <inlineHelpText>The total number of child test executions that have a status of Pass</inlineHelpText>
        <label>Total Passed</label>
        <summaryFilterItems>
            <field>provar__Test_Execution__c.provar__Status__c</field>
            <operation>equals</operation>
            <value>Pass</value>
        </summaryFilterItems>
        <summaryForeignKey>provar__Test_Execution__c.provar__Test_Cycle__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>provar__Total_Skipped__c</fullName>
        <description>The total number of child test cases that were skipped</description>
        <inlineHelpText>The total number of child test cases that were skipped</inlineHelpText>
        <label>Total Skipped</label>
        <summaryFilterItems>
            <field>provar__Test_Execution__c.provar__Status__c</field>
            <operation>equals</operation>
            <value>Skip</value>
        </summaryFilterItems>
        <summaryForeignKey>provar__Test_Execution__c.provar__Test_Cycle__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>provar__Total_Test_Executions__c</fullName>
        <label>Total Test Executions</label>
        <summaryForeignKey>provar__Test_Execution__c.provar__Test_Cycle__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>provar__Total_Tests_Executed__c</fullName>
        <description>Total of all tests executed, you can use this if you wish to create a formula field of the overall Pass Rate.</description>
        <formula>provar__Total_Passed__c + provar__Total_Failed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Tests Executed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>provar__Web_Browser__c</fullName>
        <label>Browser</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>provar__Browser</valueSetName>
        </valueSet>
    </fields>
    <label>Test Cycle</label>
    <listViews>
        <fullName>provar__All</fullName>
        <columns>NAME</columns>
        <columns>provar__Test_Plan__c</columns>
        <columns>provar__Environment__c</columns>
        <columns>provar__Status__c</columns>
        <columns>provar__Pass_Rate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TC-{00000000}</displayFormat>
        <label>Test Cycle Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Cycles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>